resources/policy/constraints/k8slocalstoragerequiresafetoevict.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: 'Requires Pods using local storage (`emptyDir` or `hostPath`) to
      have the annotation `"cluster-autoscaler.kubernetes.io/safe-to-evict": "true"`.
      Cluster Autoscaler will not delete Pods without this annotation.'
    metadata.gatekeeper.sh/title: Local Storage Requires Safe to Evict
  labels:
    app.kubernetes.io/managed-by: deployments.plural.sh
  name: k8slocalstoragerequiresafetoevict
spec:
  crd:
    spec:
      names:
        kind: K8sLocalStorageRequireSafeToEvict
      validation:
        legacySchema: false
  targets:
  - rego: |
      package k8slocalstoragerequiresafetoevict

      has_local_storage(volumes) {
        volumes[_].emptyDir
      }

      has_local_storage(volumes) {
        volumes[_].hostPath
      }

      violation[{"msg": msg}] {
        input.review.kind.group == ""
        input.review.kind.kind == "Pod"
        has_local_storage(input.review.object.spec.volumes)
        not input.review.object.metadata.annotations["cluster-autoscaler.kubernetes.io/safe-to-evict"] == "true"
        msg := "Annotation cluster-autoscaler.kubernetes.io/safe-to-evict must be present and set to true"
      }
    target: admission.k8s.gatekeeper.sh
